name:                w3dhs
version:             0.1.0.0
synopsis:            Haskell version of Id's WOLF3D game
description:         Please see README.md
homepage:            https://github.com/vTurbine/w3dhs#readme
license:             BSD3
license-file:        LICENSE
author:              Vladimir Trubilov
maintainer:          vtrubiloff@gmail.com
copyright:           2016 vTurbine
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable w3dhs
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , binary-strict
                     , bytestring
                     , SDL
  other-modules:       Resources.OMF
                     , Resources.Dictionary
                     , Resources.Configuration
                     , Resources
                     , Game
                     , SoundManager
                     , Settings
                     , Utils
